Cleanup and retrieve page size on linux; TODO: the constant seems system dependent